test/langtools/tools/javac/valhalla/lworld-values/EmptyValueTest.out
EmptyValueTest.java:7:24: compiler.err.empty.value.not.yet
1 error